Bug 108443 - moving »no time associated« entryes does not work properly
Summary: moving »no time associated« entryes does not work properly
Status: RESOLVED FIXED
Alias: None
Product: korganizer
Classification: Applications
Component: agendaview (weekview) (other bugs)
Version First Reported In: unspecified
Platform: Debian stable Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2005-07-02 16:27 UTC by M G Berberich
Modified: 2009-02-09 21:42 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description M G Berberich 2005-07-02 16:27:13 UTC
Version:            (using KDE KDE 3.3.2)
Installed from:    Debian stable Packages

moving entrys that have no time associated does not work. korganizer somehow moves the entry to the work days


- create a new entry wit »no time associated«, that's start's
  wednesday and goes till wednesday next week

- got into week view (1 week), so that hat you can see the end of the
  entry.

- with the mouse klick on the right end of the entry (beetwen
  wednesday and thursday) and darg it to the right one day.
  now the entry ends thursday

- klick on the »Go backward« icon.

- now the entry no longer goes from wednesday to thursday.
Comment 1 Reinhold Kainhofer 2005-07-03 15:06:22 UTC
Also happens with kde 3.4. The crucial thing is that the start of the event mustn't be visible to be able to reproduce...

Cheers,
Reinhold
Comment 2 Reinhold Kainhofer 2006-11-02 19:25:18 UTC
Reassigning all KOrganizer bug reports and wishes to the newly created 
korganizer-devel mailing list.
Comment 3 Sergio Martins 2009-02-02 05:02:34 UTC
SVN commit 920002 by smartins:

Add support for resizing all day multi-day events that don't have a visible start.

CCBUG: 108443


 M  +8 -1      koagendaview.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=920002
Comment 4 Sergio Martins 2009-02-02 05:09:38 UTC
There are actually two bugs, this one, where the event gets a crazy start date and the display bug.

With this last commit the event is now properly resized, but you must refresh your view in order to see it.

The display bug will be fixed as soon as I make KOAgendaView::changeDisplayAdded() share code with KOAgenda::fillAgenda().
Comment 5 Sergio Martins 2009-02-09 21:42:16 UTC
SVN commit 923976 by smartins:

Removed duplicated code in KOAgendaView::changeIncidenceDisplayAdded(), make it share all the multi-day/recurrence logic with 
fillAgenda() which already has many bug fixes.

Review link: http://reviewboard.kde.org/r/38/

BUG: 108443
BUG: 99634


 M  +91 -120   koagendaview.cpp  
 M  +1 -0      koagendaview.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=923976