Removed duplicated code in KOAgendaView::changeIncidenceDisplayAdded(), make it share all the multi-day/recurrence logic with fillAgenda() which already has many bug fixes.

Review link: http://reviewboard.kde.org/r/38/

BUG: 108443
BUG: 99634

svn path=/trunk/KDE/kdepim/; revision=923976